--- a/packages/lib2/tsconfig.json
+++ b/packages/lib2/tsconfig.json
@@ -1,25 +1,17 @@
 {
     "compilerOptions": {
-        "incremental": true,
         "target": "es2022",
         "module": "commonjs",
+        "moduleResolution": "node",
         "declaration": true,
         "declarationMap": true,
         "strict": true,
-        "moduleResolution": "node",
+        "incremental": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "rootDir": "./src",
-        "outDir": "./build"
-    },
-    "files": [],
-    "references": [
-        {
-            "path": "./packages/stringUtil"
-        },
-        {
-            "path": "./packages/lib2"
-        }
-    ]
+        "outDir": "./dist",
+        "composite": true
+    }
 }
