--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "typescript": "^5.0.3"
     },
     "scripts": {
-        "build": "tsc --build --verbose"
+        "build": "tsc --build --verbose",
+        "clean": "tsc --build --clean"
     }
 }
