--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "rootDir": "./src",
-        "outDir": "./build"
+        "outDir": "./dist"
     },
     "files": [],
     "references": [
